Updated ts files

--- a/minicrm/src/app/components/console/console.component.html
+++ b/minicrm/src/app/components/console/console.component.html
@@ -3,7 +3,7 @@
         <div class="col-md-6">
             <div class="card border rounded">
                 <div class="card-body">
-                    <h2 class="card-title">Column 1</h2>
+                    <h2 class="card-title">Company List</h2>
                     <app-list></app-list>
                 </div>
             </div>
@@ -11,7 +11,7 @@
         <div class="col-md-6">
             <div class="card border rounded">
                 <div class="card-body">
-                    <h2 class="card-title">Column 2</h2>
+                    <h2 class="card-title">Selected Company Detail</h2>
                     <app-detail></app-detail>
                 </div>
             </div>
