updated comments and styles

--- a/minicrm/src/app/app.component.html
+++ b/minicrm/src/app/app.component.html
@@ -1,2 +1,7 @@
-<h1>minicrm</h1>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">minicrm</a>
+    </div>
+</nav>
+
 <app-console></app-console>
